fix z-index in window-modal & task-window

--- a/src/App.css
+++ b/src/App.css
@@ -1771,7 +1771,7 @@ button {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 100;
+  z-index: 20;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
@@ -1782,6 +1782,7 @@ button {
   background-color: #f4f5f7;
   border-radius: 2px;
   margin: 48px 0 80px;
+  z-index: 25;
   overflow: hidden;
   position: relative;
 }
